[SONA-6] Create the backend structure for feed and users

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "sonabackend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Social media backend with feed functionality",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
     "migrate": "sequelize-cli db:migrate",
-    "seed": "sequelize-cli db:seed:all"
+    "migrate:undo": "sequelize-cli db:migrate:undo",
+    "seed": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:reset": "npm run migrate:undo && npm run migrate && npm run seed",
+    "db:setup": "npm run migrate && npm run seed"
   },
   "keywords": [],
   "author": "",
@@ -18,17 +22,21 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "path-to-regexp": "^6.2.1",
     "pg": "^8.16.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
