--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "path-to-regexp": "^6.2.1",
     "pg": "^8.16.2",
     "sequelize": "^6.37.7",
@@ -43,6 +44,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
