--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "path-to-regexp": "^6.2.1",
     "pg": "^8.16.2",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -46,6 +47,7 @@
     "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
+    "@types/yup": "^0.29.14",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
