--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^8.16.2",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
+    "@types/socket.io": "^3.0.1",
     "@types/yup": "^0.29.14",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
