--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.9.1",
