--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "helmet": "^7.1.0",
