[SONA-53] Create backend functionality for client notes

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "path-to-regexp": "^6.2.1",
     "pg": "^8.16.2",
